# pokefight

./: .gitignore  CMakeLists.txt  README.md
pokefight-client/: CMakeLists.txt  anim.cpp  anim.h  events.cpp  events.h  hud.cpp  hud.h  input.cpp  input.h  main.cpp  main.h  menu.cpp  menu.h  message.cpp  message.h  pictures.cpp  pictures.h  pokemons.cpp  pokemons.h  res.rc  settings.cpp  settings.h  texture.cpp  texture.h  toaster.cpp  toaster.h  utils.cpp  utils.h  window.cpp  window.h
pokefight-common/: attack.cpp  attack.h  const.h  ip.cpp  ip.h  player.cpp  player.h  utils.cpp  utils.h
pokefight-server/: CMakeLists.txt  attack.cpp  attack.h  colors.cpp  colors.h  main.cpp
